JDK-8215624 causes assert(worker_id < _n_workers) failed: Invalid worker_id

XMLWordPrintable

    • gc
    • b12
    • Verified

        'JDK-8215624: Add parallel heap iteration for jmap –histo' implemented a way to parallelize heap inspection. There is a mismatch between the number of requested parallel heap inspection threads, and the number of actually spawned threads.

        The heap region claimer is initialized with the value requested by the heap inspection system, while the task spawning mechanism uses the current active number of GC threads.

        # assert(worker_id < _n_workers) failed: Invalid worker_id.

        V [libjvm.so+0xcb85dc] HeapRegionClaimer::offset_for_worker(unsigned int) const+0x4c
        V [libjvm.so+0xaeabfb] G1ParallelObjectIterator::object_iterate(ObjectClosure*, unsigned int)+0x3b
        V [libjvm.so+0xc9f66e] ParHeapInspectTask::work(unsigned int)+0x7e
        V [libjvm.so+0x187cfd4] GangWorker::run_task(WorkData)+0x84

              Assignee:
              Stefan Karlsson
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: