8251570: JDK-8215624 causes assert(worker_id <' _n_workers) failed: Invalid worker_id

Reviewed-by: kbarrett, sjohanss