src/hotspot/share/gc/z/zCollectedHeap.cpp
@@ -253,10 +253,6 @@ void ZCollectedHeap::object_iterate(ObjectClosure* cl) {
   _heap.object_iterate(cl, true /* visit_weaks */);
 }
 
-void ZCollectedHeap::run_task(AbstractGangTask* task) {
-  return _heap.run_task(task);
-}
-
 void ZCollectedHeap::keep_alive(oop obj) {
   _heap.keep_alive(obj);
 }
